syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc FindByEmail (FindByEmailRequest) returns (UserResponse);
  rpc FindOne (FindOneRequest) returns (UserResponse);
  rpc FindAll (Empty) returns (UserList);
  
}


message UserList {
  repeated User items = 1;
}


message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string createdAt = 6;
  string updatedAt = 7;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message UserResponse {
  User user = 1;
}

message FindByEmailRequest {
  string email = 1;
}

message FindOneRequest {
  int32 id = 1;
}
